--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,2 +1,73 @@
 <!--pages/cart/cart.wxml-->
-<text>pages/cart/cart.wxml</text>
+
+<view class='container cart-container'>
+
+  <block wx:if="{{ carts.length>0 }}">
+
+    <view class='cart-box'>
+      <block wx:for="{{carts}}" wx:key="{{index}}">
+        <view class='cart-item'>
+          <!-- 单个购物车列表内部 -->
+          <view class='cart-item-main'>
+            
+            <!-- 按钮 -->
+            <view class='cart-item-checkbox' bindtap='listen' data-fun="toggleSelect" data-id="{{item.id}}"  >
+              <image wx:if="{{item.selectStatus}}" src="../../imgs/icon/circle@selected.png"></image>
+              <image wx:else src='../../imgs/icon/circle@noselected.png'></image>
+            </view>
+
+            <!-- 商品图片 -->
+            <view class='cart-item-img'>
+              <image class='good-image' src="{{item.main_img_url}}"></image>
+            </view>
+
+
+            <!-- 数量修改 -->
+            <view class='cart-item-word'>
+              <view class='title-box'>
+                <text class='title'> {{ item.name }} </text>
+                <text>¥ {{ item.price }}</text>
+              </view>
+
+              <view class='bottom-box'>
+                <view class='cart-item-counts'>
+                  <view class='btns'>-</view>
+                  <view class='counts'>{{ item.count }}</view>
+                  <view class='btns'>+</view>
+                </view>
+
+                <view class='delete'>x</view>
+              </view>
+
+
+            </view>
+
+
+          </view>
+        </view>
+      </block>
+    </view>
+
+    <view class='footer-account-box all-account-box'>
+      <view class="all-select" ontap="toggleSelectAll" data-status="{{selectedTypeCounts==cartData.length?'true':'false'}}">
+          <image wx:if="{{selectedTypeCounts==cartData.length}}"
+                  class="title-icon" src="../../imgs/icon/all@selected.png"></image>
+          <image wx:else class="title-icon" src="../../imgs/icon/all.png"></image>
+          <text>全选({{selectedCounts}})</text>
+      </view>
+      <view class="all-price-submit {{account==0?'disabled':''}}" bindtap="submitOrder">
+          <view class="accounts-btn">下单</view>
+          <view class="price-text">￥{{account}}</view>
+          <view class="arrow-icon">
+              <image wx:if="{{account==0}}" src="../../imgs/icon/arrow@grey.png"></image>
+              <image wx:else src="../../imgs/icon/arrow.png"></image>
+          </view>
+      </view>
+    </view>
+
+  </block>
+  <view wx:else class='no-data'>
+    您还没有添加任何商品
+  </view>
+
+</view>
