--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -31,12 +31,12 @@
 
               <view class='bottom-box'>
                 <view class='cart-item-counts'>
-                  <view class='btns'>-</view>
+                  <view class='btns {{item.count<=1?"disabled":""}}' data-id='{{item.id}}' data-type="decr" bindtap='listen' data-fun="changeCounts"  >-</view>
                   <view class='counts'>{{ item.count }}</view>
-                  <view class='btns'>+</view>
+                  <view class='btns' data-id='{{item.id}}' data-type="incr" bindtap='listen' data-fun="changeCounts" >+</view>
                 </view>
 
-                <view class='delete'>x</view>
+                <view class='delete' data-id='{{item.id}}' bindtap='listen' data-fun="deleteOne">x</view>
               </view>
 
 
@@ -48,18 +48,18 @@
       </block>
     </view>
 
-    <view class='footer-account-box all-account-box'>
-      <view class="all-select" ontap="toggleSelectAll" data-status="{{selectedTypeCounts==cartData.length?'true':'false'}}">
-          <image wx:if="{{selectedTypeCounts==cartData.length}}"
+    <view class='footer-account-box all-accounts-box'>
+      <view class="all-select" bindtap="listen" data-fun='toggleSelectAll' data-status="{{selectedTypeCount==carts.length?true:false}}">
+          <image wx:if="{{selectedTypeCount==carts.length}}"
                   class="title-icon" src="../../imgs/icon/all@selected.png"></image>
           <image wx:else class="title-icon" src="../../imgs/icon/all.png"></image>
-          <text>全选({{selectedCounts}})</text>
+          <text>全选({{selectedTotalCount + '/' + selectedTypeCount}})</text>
       </view>
-      <view class="all-price-submit {{account==0?'disabled':''}}" bindtap="submitOrder">
+      <view class="all-price-submit {{selectedMoney==0?'disabled':''}}" bindtap="listen"  data-fun="submitOrder" >
           <view class="accounts-btn">下单</view>
-          <view class="price-text">￥{{account}}</view>
+          <view class="price-text">￥{{selectedMoney}}</view>
           <view class="arrow-icon">
-              <image wx:if="{{account==0}}" src="../../imgs/icon/arrow@grey.png"></image>
+              <image wx:if="{{selectedMoney==0}}" src="../../imgs/icon/arrow@grey.png"></image>
               <image wx:else src="../../imgs/icon/arrow.png"></image>
           </view>
       </view>
